fix: overflow-x caused by long panel title (#38)

--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -310,3 +310,11 @@
 .light-scheme {
     color-scheme: light;
 }
+
+.break-word {
+    word-break: break-word;
+}
+
+.px-sm {
+    padding-inline: 1.6rem;
+}
